feat: correct load and display data

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <div class="card text-center wrapper">
         <div class="card-header">
           <h1 class="display-4">Star Wars Pedia</h1>
+          <!-- THEME SWITCHER -->
+          <!-- <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" id="customSwitch1">
+            <label class="custom-control-label" for="customSwitch1">White side</label>
+          </div> -->
           <ul class="nav nav-tabs card-header-tabs nav-justified">
             <li class="nav-item">
               <a class="nav-link active" href="#">People</a>
@@ -30,40 +35,17 @@
                 <a class="nav-link active" href="#">Starships</a>
             </li>
           </ul>
-          <input placeholder="Search" type="text" class="form-control" id="search">
-          <div class="custom-control custom-switch">
-            <input type="checkbox" class="custom-control-input" id="customSwitch1">
-            <label class="custom-control-label" for="customSwitch1">White side</label>
-          </div>
+          <!-- SEARCH -->
+          <!-- <input placeholder="Search" type="text" class="form-control" id="search"> -->
         </div>
+        <div class="starwars-demo">
+          <img src="//cssanimation.rocks/demo/starwars/images/star.svg" alt="Star" class="star">
+          <img src="//cssanimation.rocks/demo/starwars/images/wars.svg" alt="Wars" class="wars">
+        </div> 
         <div class="card-body">
-            <div class="card-columns">
-                <div class="card">
-                    <h5 class="card-title">Luke Skywalker</h5>
-                    <p>Height <span class="badge badge-secondary">111</span></p>
-                    <p>Mass <span class="badge badge-secondary">111</span></p>
-                    <p>Hair color <span class="badge badge-secondary">111</span></p>
-                    <p>Parameter <span class="badge badge-secondary">111</span></p>
-                    <p>Parameter <span class="badge badge-secondary">111</span></p>
-                </div> 
-            </div>   
-              <!-- <ul class="pagination">
-                <li class="page-item disabled">
-                  <a class="page-link" href="#" tabindex="-1">Previous</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item active">
-                  <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="#">Next</a>
-                </li>
-              </ul> -->
-
-         </div>
-         
-      </div>
+        </div>  
+      </div>    
+    </div>
       
 
     <script src="./dist/bundle.js"></script>
