fix: solve PR remarks

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
           <h1 class="display-5">Star Wars Pedia</h1>
           <ul class="nav nav-tabs card-header-tabs nav-justified">
             <li class="nav-item">
-              <a class="nav-link active" href="#">People</a>
+              <a class="nav-link " href="#">People</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Planets</a>
+              <a class="nav-link" href="#">Planets</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Films</a>
+              <a class="nav-link" href="#">Films</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">Species</a>
+                <a class="nav-link" href="#">Species</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">Vehicles</a>
+                <a class="nav-link" href="#">Vehicles</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">Starships</a>
+                <a class="nav-link" href="#">Starships</a>
             </li>
           </ul>
           <form class="search-form">
