--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <button id="save"><i class="fa fa-save"></i></button>
             <button id="load"><i class="fa fa-folder"></i></button>
             <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="customSwitch1">
-              <label class="custom-control-label" for="customSwitch1">White side</label>
+              <input type="checkbox" class="custom-control-input" id="switch">
+              <label class="custom-control-label" for="switch">White side</label>
             </div>
           </form>
         </div>
